// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuantityBar> avoid render percentage on disabled 1`] = `
<div
  className="tribe-editor__quantity-bar"
/>
`;

exports[`<QuantityBar> independent capacity 1`] = `
<div
  className="tribe-editor__quantity-bar"
>
  <span
    className="tribe-editor__quantity-bar--available"
    style={
      Object {
        "width": "20.00%",
      }
    }
  />
</div>
`;

exports[`<QuantityBar> shared capacity 1`] = `
<div
  className="tribe-editor__quantity-bar"
>
  <span
    className="tribe-editor__quantity-bar--shared"
    style={
      Object {
        "width": "80.00%",
      }
    }
  />
  <span
    className="tribe-editor__quantity-bar--available"
    style={
      Object {
        "width": "20.00%",
      }
    }
  />
</div>
`;

exports[`<QuantityBar> with limited capacity 1`] = `
<div
  className="tribe-editor__quantity-bar"
>
  <span
    className="tribe-editor__quantity-bar--shared"
    style={
      Object {
        "width": "80.00%",
      }
    }
  />
  <span
    className="tribe-editor__quantity-bar--available"
    style={
      Object {
        "width": "20.00%",
      }
    }
  />
  <span
    className="tribe-editor__quantity-bar--capacity"
    style={
      Object {
        "width": "50.00%",
      }
    }
  />
</div>
`;
